fix: add section revamped w/ spacing on right section

--- a/src/pages/tasks/tasks.scss
+++ b/src/pages/tasks/tasks.scss
@@ -18,7 +18,6 @@
     min-height: 5rem;
     max-height: 8rem;
     gap: 1rem;
-    border: 1px solid red;
   }
 
   &__highlighter {
@@ -53,7 +52,6 @@
     min-height: 5rem;
     max-height: 8rem;
     gap: 1rem;
-    border: 1px solid red;
   }
 
   &__history-icon {
@@ -78,11 +76,19 @@
     flex: 3;
     // padding: 1rem;
     height: 70vh;
-    border: 1px solid red;
+  }
+
+  &__add-container {
+    display: flex;
+    display: hidden;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 25px;
   }
 
   &__task-input {
     display: flex;
+    width: 100%;
     padding: 0 2rem;
     // justify-content: space-around;
     border: none;
@@ -97,9 +103,11 @@
   }
 
   &__add-task {
-    position: absolute;
+    display: inline-block;
+    position: relative;
+    margin: -2.5rem;
     right: 5rem;
-    top: 12rem;
+    // top: 12rem;
     cursor: pointer;
   }
 
@@ -128,5 +136,13 @@
     gap: 1rem;
     align-items: center;
     font-weight: 500;
+  }
+
+  &__finished-tasks {
+    display: none;
+    @media (min-width: 576px) {
+      display: block;
+      flex: 1;
+    }
   }
 }
